2013-10-01  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* extras/migrate.sql: Added the column 'reference' to the table
	'tinvoice'.
	
	* godmode/setup/setup_crm.php: Deleted the invoice logo alignment
	from the form.
	
	* include/ajax/inventories.php: Changed some label names.
	
	* operation/companies/company_detail.php: Deleted the column
	description from the invoice list of a company.
	
	* operation/incidents/incident.php: Improved the identation.
	
	* operation/invoices/invoice_template.php: Visual changes of the
	invoice pdf.
	
	* operation/invoices/invoice_view.php: Now the tax amount appears
	rounded to 2 decimal points.
	
2013-10-01  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* index.php: Fixed the output name of the pdf.
	
	* include/pdf_translator.php: Now the function "writePDFfile" shows
	a file with a custom name correctly.
	
	* operation/contracts/contract_detail.php: Now the 'days to expire'
	filter does not sow the expired contracts.
	
	* operation/invoices/invoice_template.php: Visual changes on the
	invoice output.
	
	* operation/users/user_edit.php: Now an user can upload a custom avatar
	from his profile.
	
2013-09-30  Sancho Lerena <slerena@artica.es>

	* operation/invoices/invoices.php
       	operation/companies/company_detail.php: Fixed problem on invoice creation
	from the company page.

2013-09-30  Vanessa Gil <vanessa.gil@artica.es>

	* include/languages/ar.mo
	  include/languages/ar.po
	  include/languages/bn.mo
	  include/languages/bn.po
 	  include/languages/cs.mo
	  include/languages/cs.po
	  include/languages/da.mo
	  include/languages/da.po
	  include/languages/de.mo
	  include/languages/de.po
	  include/languages/el.mo
	  include/languages/el.po
	  include/languages/en_GB.mo
	  include/languages/en_GB.po
	  include/languages/es.mo
	  include/languages/es.po
	  include/languages/ar.mo
	  include/languages/fe.po
	  include/languages/fe.mo
	  include/languages/fr.po
	  include/languages/fr.mo